<resources>
    <string name="app_name" translatable="false">Become a King</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="background">Background</string>
    <string name="test">Test</string>
    <string name="ad">Ad</string>
    <string name="in_development">This part is in development</string>
    <string name="notification">Notification</string>
    <string name="got_it">Got it</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="travel">Travel</string>
    <string name="new_game">New Game</string>
    <string name="load">Load</string>
    <string name="language">Language</string>
    <string name="image_of_knights">Image of knights</string>
    <string name="save_not_found">Save not found</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="select_language">Select language</string>
    <string name="change">Change</string>
    <string name="back">Back</string>
    <string name="select_sex">Select character sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="_continue">Continue</string>
    <string name="select_starting_title">Select character starting title. You will unlock more titles as you play.</string>
    <string name="rogue">Rogue</string>
    <string name="villager">Villager</string>
    <string name="bandit">Bandit</string>
    <string name="chose_title">Choose a character title</string>
    <string name="name_your_personage">Name your character</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="start">Start</string>
    <string name="health">Health</string>
    <string name="reputation">Reputation</string>
    <string name="money">Money</string>
    <string name="next_day">Next day</string>
    <string name="_0" translatable="false">0</string>
    <string name="personage">Character</string>
    <string name="shop">Shop</string>
    <string name="property">Property</string>
    <string name="job">Job</string>
    <string name="finance">Finance</string>
    <string name="battle">Battle</string>
    <string name="income_and_expense">Income and Expense</string>
    <string name="personage_image">Character image</string>
    <string name="frame">Frame</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="decorative_element">Decorative Element</string>
    <string name="day">Day</string>
    <string name="none">None</string>
    <string name="nutrition">Nutrition</string>
    <string name="bread">Bread</string>
    <string name="meat">Meat</string>
    <string name="cheese">Cheese</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="seafood">Seafood</string>
    <string name="soup">Soup</string>
    <string name="nourishing_food">Nourishing Lunch</string>
    <string name="luxurious_food">Luxurious Food</string>
    <string name="aristocracy_food">Aristocracy Food</string>
    <string name="royal_food">Royal Food</string>
    <string name="clothes">Clothes</string>
    <string name="poor_mans_clothes">Poor Man\'s Clothes</string>
    <string name="peasant_clothes">Peasant Clothes</string>
    <string name="citizen_clothes">Citizen Clothes</string>
    <string name="luxurious_clothes">Luxurious Clothes</string>
    <string name="aristocracy_clothes">Aristocracy Clothes</string>
    <string name="earl_clothes">Earl Clothes</string>
    <string name="royal_clothes">Royal Clothes</string>
    <string name="entertainment">Entertainment</string>
    <string name="have_a_drink_at_the_tavern">Have a Drink at the Tavern</string>
    <string name="walk_around_the_fair">Walk Around the Fair</string>
    <string name="watch_the_tournament">Watch the Tournament</string>
    <string name="visit_the_theatre">Visit the Theatre</string>
    <string name="organize_a_hunt">Organize a Hunt</string>
    <string name="throw_a_feast">Throw a Feast</string>
    <string name="weapon">Weapon</string>
    <string name="ax">Axe</string>
    <string name="rusty_sword">Rusty Sword</string>
    <string name="steel_sword">Steel Sword</string>
    <string name="two_blades">Two Blades</string>
    <string name="ax_and_shield">Axe and Shield</string>
    <string name="sword_and_shield">Sword and Shield</string>
    <string name="ancient_artifacts">Ancient Artifacts</string>
    <string name="armor">Armor</string>
    <string name="leather_armor">Leather Armor</string>
    <string name="rusty_armor">Rusty Armor</string>
    <string name="old_armor">Old Armor</string>
    <string name="heavy_armor">Heavy Armor</string>
    <string name="good_armor">Good Armor</string>
    <string name="luxurious_armor">Luxurious Armor</string>
    <string name="king_armor">King\'s Armor</string>
    <string name="housing">Housing</string>
    <string name="tent">Tent</string>
    <string name="hut">Hut</string>
    <string name="old_house">Old House</string>
    <string name="stone_house">Stone House</string>
    <string name="country_house">Country House</string>
    <string name="small_mansion">Small Mansion</string>
    <string name="medium_mansion">Medium Mansion</string>
    <string name="large_mansion">Large Mansion</string>
    <string name="furniture">Furniture</string>
    <string name="old_furniture">Old Furniture</string>
    <string name="ordinary_furniture">Ordinary Furniture</string>
    <string name="new_furniture">New Furniture</string>
    <string name="luxurious_furniture">Luxurious Furniture</string>
    <string name="royal_furniture">Royal Furniture</string>
    <string name="books">Books</string>
    <string name="old_book">Old Book</string>
    <string name="new_book">New Book</string>
    <string name="science_book">Science Book</string>
    <string name="military_strategy_books">Military Strategy Books</string>
    <string name="small_library">Small Library</string>
    <string name="medium_library">Medium Library</string>
    <string name="huge_library">Huge Library</string>
    <string name="royal_library">Royal Library</string>
    <string name="artworks">Artworks</string>
    <string name="workshop_figurine">Workshop Figurine</string>
    <string name="local_painting">Local Painting</string>
    <string name="painting_by_a_famous_artist">Painting by a Famous Artist</string>
    <string name="marble_statue">Marble Statue</string>
    <string name="private_museum">Private Museum</string>
    <string name="horse">Horse</string>
    <string name="lame_horse">Lame horse</string>
    <string name="young_horse">Young horse</string>
    <string name="fast_horse">Fast horse</string>
    <string name="light_armored_horse">Lightly armored horse</string>
    <string name="medium_armored_horse">Medium Armored Horse</string>
    <string name="heavy_armored_horse">Heavy Armored Horse</string>
    <string name="work_in_a_village">Work in a Village</string>
    <string name="grazing_animals">Grazing Animals</string>
    <string name="harvesting">Harvesting</string>
    <string name="logging">Logging</string>
    <string name="work_in_a_mine">Work in a Mine</string>
    <string name="unloading_ships">Unloading Ships</string>
    <string name="work_in_a_town">Work in a Town</string>
    <string name="cart_repair">Cart Repair</string>
    <string name="architects_apprentice">Architect\'s Apprentice</string>
    <string name="weavers_apprentice">Weaver\'s Apprentice</string>
    <string name="craftsmans_apprentice">Craftsman\'s Apprentice</string>
    <string name="blacksmiths_apprentice">Blacksmith\'s Apprentice</string>
    <string name="lords_courtier">Lord\'s Courtier</string>
    <string name="caravan_protection">Caravan Protection</string>
    <string name="mercenary_in_the_army">Mercenary in the Army</string>
    <string name="enterprises">Enterprises</string>
    <string name="domains">Domains</string>
    <string name="max_health">Maximum Health</string>
    <string name="might">Might</string>
    <string name="watch_ad">Watch ad</string>
    <string name="_300" translatable="false">+300</string>
    <string name="_500" translatable="false">+500</string>
    <string name="_1000" translatable="false">+1000</string>
    <string name="level">Level</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="caravans">Caravans</string>
    <string name="settings">Settings</string>
    <string name="developer">Developer</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="age_d">Age %d</string>
    <string name="watch">Clock</string>
    <string name="level_d">Level %d</string>
    <string name="d_d" translatable="false">%d/%d</string>
    <string name="skill_points">Skill Points</string>
    <string name="characteristics">Characteristics</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="strength">Strength</string>
    <string name="luck">Luck</string>
    <string name="regeneration">Regeneration</string>
    <string name="skill_points_d">Skill Points %d</string>
    <string name="drop_skill_points">Drop Skill Points</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="buy_d">Buy: %d</string>
    <string name="bought">Bought</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="add_to_ration">Add to ration</string>
    <string name="in_ration">In ration</string>
    <string name="completed">Completed</string>
    <string name="not_enough_money">Not enough money</string>
    <string name="not_enough_strength_points">Not enough strength points</string>
    <string name="not_enough_reputation">Not enough reputation</string>
    <string name="null_personage_error">Error. Character is missing.</string>
    <string name="you_dont_have_a_time">You don\'t have enough time left to do this job today</string>
    <string name="c_d_per_day">%1$c %2$d per day</string>
    <string name="c_d" translatable="false">%1$c %2$d</string>
    <string name="c_d_per_click">%1$c %2$d per click</string>
    <string name="d_maximum_amount">%1$d maximum amount</string>
    <string name="c_d_per_1_might">%1$c %2$d per 1 might</string>
    <string name="required_strength_skill_points_d">%1$d strength required</string>
    <string name="d_reputation_required_">%1$d reputation required</string>
    <string name="horse_and_weapon_required">Horse and weapon required</string>
    <string name="_10" translatable="false">10</string>
    <string name="instruction1">Click as fast as you can - your income depends on it!</string>
    <string name="instruction2">Click the buttons in the right order!</string>
    <string name="you_have_earned_d_coins">You have earned %d coins</string>
    <string name="exit">Exit</string>
    <string name="s_s" translatable="false">%1$s %2$s</string>
    <string name="game_over">Game over.</string>
    <string name="negative_health">All health lost. You are dead.</string>
    <string name="negative_reputation">Your reputation has dropped below zero. You have been banished from the city.</string>
    <string name="negative_money">You owe money to the wrong people. You have been sold into slavery.</string>
    <string name="map">Map</string>
    <string name="city">City</string>
    <string name="drakkenburg">Drakkenburg</string>
    <string name="trading">Trading</string>
    <string name="market">Market</string>
    <string name="equip">Equip</string>
    <string name="gossips">Gossips</string>
    <string name="collect">Collect</string>
    <string name="bank">Bank</string>
    <string name="investments">Investments</string>
    <string name="workshops">Workshops</string>
    <string name="look">Look</string>
</resources>