<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.FinanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:id="@+id/image_view_city"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/img_logging"
                android:contentDescription="@string/drakkenburg"/>

            <com.scipath.becomeaking.view.customview.CustomLinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:backgroundColor="@color/brown"
                app:backgroundDrawable="@drawable/bg_wood_wall"
                android:orientation="vertical" >

                <com.scipath.becomeaking.view.customview.CustomButton
                    android:id="@+id/button_city"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="10dp"
                    app:backgroundColor="@color/grayish_brown"
                    android:text="@string/drakkenburg"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_small"
                    android:textStyle="bold"
                    android:textAllCaps="false" />

                <com.scipath.becomeaking.view.customview.CustomButton
                    android:id="@+id/button_map"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:backgroundColor="@color/blue"
                    android:text="@string/map"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_small"
                    android:textStyle="bold"
                    android:textAllCaps="false" />

            </com.scipath.becomeaking.view.customview.CustomLinearLayout>

        </LinearLayout>

        <com.scipath.becomeaking.view.layout.FinanceMenuElementLayout
            android:id="@+id/element_trading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:src="@drawable/img_trading"
            app:text="@string/trading"
            app:buttonText="@string/market" />

        <com.scipath.becomeaking.view.layout.FinanceMenuElementLayout
            android:id="@+id/element_caravans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:src="@drawable/img_caravans"
            app:text="@string/caravans"
            app:buttonText="@string/equip" />

        <com.scipath.becomeaking.view.layout.FinanceMenuElementLayout
            android:id="@+id/element_gossips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:src="@drawable/img_gossips"
            app:text="@string/gossips"
            app:buttonText="@string/collect" />

        <com.scipath.becomeaking.view.layout.FinanceMenuElementLayout
            android:id="@+id/element_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:src="@drawable/img_bank"
            app:text="@string/bank"
            app:buttonText="@string/investments" />

        <com.scipath.becomeaking.view.layout.FinanceMenuElementLayout
            android:id="@+id/element_workshops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:src="@drawable/img_workshops"
            app:text="@string/workshops"
            app:buttonText="@string/look" />

    </LinearLayout>

</FrameLayout>