<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_brown"
    android:fitsSystemWindows="true"
    tools:context=".view.activity.GameActivity" >

    <include layout="@layout/layout_activity_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/main_stats"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:padding="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/border_brown"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/icon_heart"
                    android:background="@color/game_menu_element"
                    android:contentDescription="@string/health" />

                <TextView
                    android:id="@+id/text_view_health"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="1dp"
                    android:background="@color/game_menu_element"
                    android:text="@string/_0"
                    android:textColor="@color/text_brown"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/icon_civic_crown"
                    android:background="@color/game_menu_element"
                    android:contentDescription="@string/reputation" />

                <TextView
                    android:id="@+id/text_view_reputation"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="1dp"
                    android:background="@color/game_menu_element"
                    android:text="@string/_0"
                    android:textColor="@color/text_brown"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/icon_coin1"
                    android:scaleType="fitXY"
                    android:background="@color/game_menu_element"
                    android:contentDescription="@string/money" />

                <TextView
                    android:id="@+id/text_view_money"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="1dp"
                    android:background="@color/game_menu_element"
                    android:text="@string/_0"
                    android:textColor="@color/text_brown"
                    android:textSize="20sp"
                    android:textAlignment="center" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/image_button_next_day"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="15dp"
                android:src="@drawable/icon_watch"
                android:scaleType="fitCenter"
                android:background="@null"
                android:contentDescription="@string/next_day" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_activities"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintTop_toBottomOf="@id/main_stats"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="2dp"
            android:padding="1dp"
            android:orientation="horizontal"
            android:gravity="fill_horizontal"
            android:background="@color/border_brown">

            <ImageButton
                android:id="@+id/button_personage"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:src="@drawable/icon_armor"
                android:scaleType="fitCenter"
                android:background="@color/game_menu_element"
                android:contentDescription="@string/personage" />

            <ImageButton
                android:id="@+id/button_shop"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="1dp"
                android:src="@drawable/icon_food"
                android:scaleType="fitCenter"
                android:background="@color/game_menu_element"
                android:contentDescription="@string/shop" />

            <ImageButton
                android:id="@+id/button_housing"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:src="@drawable/icon_house"
                android:scaleType="fitCenter"
                android:background="@color/game_menu_element"
                android:contentDescription="@string/property" />

            <ImageButton
                android:id="@+id/button_work"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="1dp"
                android:src="@drawable/icon_weapon"
                android:scaleType="fitCenter"
                android:background="@color/game_menu_element"
                android:contentDescription="@string/job" />

            <ImageButton
                android:id="@+id/button_finance"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:src="@drawable/icon_moneybag"
                android:scaleType="fitCenter"
                android:background="@color/game_menu_element"
                android:contentDescription="@string/finance" />

            <ImageButton
                android:id="@+id/button_battle"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:layout_marginLeft="1dp"
                android:src="@drawable/icon_battle"
                android:scaleType="fitCenter"
                android:background="@color/game_menu_element"
                android:contentDescription="@string/battle" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="117dp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
