<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ItemsFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/button_previous_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arrow_brown_left"
                android:background="@null"
                android:contentDescription="@string/previous" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_items"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:overScrollMode="never"/>

            <ImageButton
                android:id="@+id/button_next_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arrow_brown_right"
                android:background="@null"
                android:contentDescription="@string/next" />

        </LinearLayout>

        <com.scipath.becomeaking.view.view.CustomLinearLayout
            android:id="@+id/layout_experience"
            android:layout_width="143dp"
            android:layout_height="42dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundColor="@color/blue"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_skill_point"
                android:contentDescription="@string/skill_points" />

            <TextView
                android:id="@+id/text_view_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </com.scipath.becomeaking.view.view.CustomLinearLayout>

        <com.scipath.becomeaking.view.view.CustomButton
            android:id="@+id/button_back"
            android:layout_width="143dp"
            android:layout_height="42dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundColor="@color/button_dark_brown"
            app:backgroundColorPressed="@color/text_brown" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>