<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_and_expense"
        android:textColor="@color/light_brown"
        android:textSize="24sp"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:padding="1dp"
            android:background="@color/border_brown"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/image_view_health_income"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="1dp"
                android:src="@drawable/icon_heart"
                android:background="@color/icon_green"
                android:contentDescription="@string/health" />

            <TextView
                android:id="@+id/text_view_health_income"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:background="@color/game_menu_brown"
                android:text="@string/_0"
                android:textColor="@color/darker_brown"
                android:textSize="20sp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:padding="1dp"
            android:background="@color/border_brown"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/image_view_reputation_income"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="1dp"
                android:src="@drawable/icon_civic_crown"
                android:background="@color/icon_green"
                android:contentDescription="@string/reputation" />

            <TextView
                android:id="@+id/text_view_reputation_income"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:background="@color/game_menu_brown"
                android:text="@string/_0"
                android:textColor="@color/darker_brown"
                android:textSize="20sp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:padding="1dp"
            android:background="@color/border_brown"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/image_view_money_income"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="1dp"
                android:src="@drawable/icon_coin1"
                android:background="@color/icon_green"
                android:contentDescription="@string/money" />

            <TextView
                android:id="@+id/text_view_money_income"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/game_menu_brown"
                android:text="@string/_0"
                android:textColor="@color/darker_brown"
                android:textSize="20sp"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_image_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="15dp" >

        <ImageView
            android:id="@+id/image_view_personage_icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="65dp"
            android:layout_marginHorizontal="75dp"
            android:src="@drawable/img_poor_man_clothes"
            android:adjustViewBounds="true"
            android:contentDescription="@string/personage_image" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/img_frame"
            android:adjustViewBounds="true"
            android:contentDescription="@string/frame"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>